app/assets/stylesheets/pages/profile.scss
.profile-avatar-form-option {
  hr {
    margin: 10px 0;
  }
}

.avatar-image {
  @media (min-width: $screen-sm-min) {
    float: left;
    margin-bottom: 0;
  }
}

.avatar-file-name {
  position: relative;
  top: 2px;
  display: inline-block;
}

.account-btn-link,
.profile-settings-sidebar a {
  color: $md-link-color;
}

.oauth-buttons {
  .btn-group {
    margin-right: 10px;
  }

  .btn {
    line-height: 40px;
    height: 42px;
    padding: 0 12px;

    img {
      width: 32px;
      height: 32px;
    }
  }
}

// Profile > Account > Two Factor Authentication
.two-factor-new {
  .manual-instructions {
    h3 {
      margin-top: 0;
    }

    // Slightly increase the size of the details so they're easier to read
    dl {
      font-size: 1.1em;
    }
  }
}

.account-well {
  padding: 10px;
  background-color: $help-well-bg;
  border: 1px solid $help-well-border;
  border-radius: $border-radius-base;

  ul {
    padding-left: 20px;
    margin-bottom: 0;
  }
}

.calendar-hint {
  margin-top: -12px;
  float: right;
  font-size: 12px;
}

.profile-link-holder {
  display: inline;

  a {
    color: $blue-dark;
    text-decoration: none;
  }
}

// Middle dot divider between each element in a list of items.
.middle-dot-divider {
  &:after {
    content: "\00B7"; // Middle Dot
    padding: 0 6px;
    font-weight: bold;
  }

  &:last-child {
    &:after {
      content: "";
      padding: 0;
    }
  }
}

.profile-user-bio {
  // Limits the width of the user bio for readability.
  max-width: 750px;
  margin: auto;
}

.user-avatar-button {
  .file-name {
    display: inline-block;
    padding-left: 10px;
  }
}

.key-list-item {
  .key-list-item-info {
    @media (min-width: $screen-sm-min) {
      float: left;
    }
  }

  .description {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
  }
}

.key-icon {
  color: $ssh-key-icon-color;
  font-size: $ssh-key-icon-size;
  line-height: 42px;
}

.key-created-at {
  line-height: 42px;
}

.profile-settings-content {
  a {
    color: $md-link-color;
  }
}

.change-username-title {
  color: $gl-warning;
}

.remove-account-title {
  color: $gl-danger;
}

.provider-btn-group {
  display: inline-block;
  margin-right: 10px;
  border: 1px solid $provider-btn-group-border;
  border-radius: 3px;

  &:last-child {
    margin-right: 0;
  }
}

.provider-btn-image {
  display: inline-block;
  padding: 5px 10px;
  border-right: 1px solid $provider-btn-group-border;

  > img {
    width: 20px;
  }
}

.provider-btn {
  display: inline-block;
  padding: 5px 10px;
  margin-left: -3px;
  line-height: 22px;
  background-color: $gray-light;

  &.not-active {
    color: $provider-btn-not-active-color;
  }
}

.profile-settings-message {
  line-height: 32px;
  color: $warning-message-color;
  background-color: $warning-message-bg;
  border: 1px solid $warning-message-border;
  border-radius: $border-radius-base;
}

.oauth-applications {
  form {
    display: inline-block;
  }

  .last-heading {
    width: 105px;
  }
}

.modal-profile-crop {
  .modal-dialog {
    width: 380px;

    @media (max-width: $screen-sm-min) {
      width: auto;
    }

  }

  .profile-crop-image-container {
    height: 300px;
    margin: 0 auto;
  }

  .crop-controls {
    padding: 10px 0 0;
    text-align: center;
  }
}

